--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="exoesqueleto" role="tabpanel" aria-labelledby="profile-tab">...</div>
-        <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        <div class="tab-pane fade" id="exoesqueleto" role="tabpanel" aria-labelledby="profile-tab">....</div>
+        <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="contact-tab">....</div>
       </div>
   
   
