--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link active" id="ficha-tab" data-toggle="tab" href="#ficha" role="tab" aria-controls="ficha" aria-selected="true">Ficha</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="exoesqueleto-tab" data-toggle="tab" href="#exoesqueleto" role="tab" aria-controls="exoesqueleto" aria-selected="false">Exoesqueleto</a>
+            <a class="nav-link" id="itens-tab" data-toggle="tab" href="#itens" role="tab" aria-controls="itens" aria-selected="false">Itens</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="backstory-tab" data-toggle="tab" href="#backstory" role="tab" aria-controls="backstory" aria-selected="false">Backstory</a>
@@ -167,8 +167,15 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="exoesqueleto" role="tabpanel" aria-labelledby="profile-tab">...</div>
-        <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">...</div>
+        <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="backstory-tab">
+          <h2 id="backstory-title">Backstory</h2>
+          <div id="backstory-content">
+
+            <p>Alabaster é um orc nascido em uma aldeia afastada a agitação das cidades grandes. Há séculos dominada </p>
+        
+          </div>
+        </div>
       </div>
   
   
