--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
           <h2 id="backstory-title">Backstory</h2>
           <div id="backstory-content">
 
-            <p>Alabaster é um orc nascido em uma aldeia afastada a agitação das cidades grandes. Há séculos dominada </p>
+            <p>Alabaster é um orc nascido em uma aldeia afastada a agitação das cidades grandes. Há séculos dominada pelo Senhor Soberano, seus moradores são obrigados a pagar altas taxas de impostos, sobrando apenas o suficiente para sobreviverem.</p>
+            <p>Os orcs da aldeia eram acostumados a demonstrar sua força em disputas e lutas, com os vitoriosos acumulando prestígio. Alabaster, desde criança não muito forte, evitava esse tipo de interação, preferindo passar seu tempo em uma biblioteca abandonada que encontrara em uma de suas muitas andanças.</p>
         
           </div>
         </div>
