--- a/index.html
+++ b/index.html
@@ -167,7 +167,24 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">...</div>
+        <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">
+          <div class="containter">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card">
+                  <h2 class="card-header">Exoesqueleto</h2>
+                  <div class="card-body">
+                    <div class="card-text">
+                      <p>Exoesqueleto sísmico</p>
+                      <p>Força +4</p>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="backstory-tab">
           <h2 id="backstory-title">Backstory</h2>
           <div id="backstory-content">
