--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
                   
                 </div>
               </div>
+
+              <div class="col-md-8">
+                <div class="card">
+                  <div class="card-header">Itens</div>
+                  <div class="card-body">
+                    <ul>
+                      <li>Espada longa (1d10 + força/2)</li>
+                      <li>Machado curto (1d10 + força/2)</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
