--- a/index.html
+++ b/index.html
@@ -200,12 +200,15 @@
         <div class="tab-pane fade" id="backstory" role="tabpanel" aria-labelledby="backstory-tab">
           <h2 id="backstory-title">Backstory</h2>
           <div id="backstory-content">
+            <h3>Origem</h3>
 
             <p>Alabaster é um orc nascido em uma aldeia afastada a agitação das cidades grandes. Há séculos dominada pelo Senhor Soberano, seus moradores são obrigados a pagar altas taxas de impostos, sobrando apenas o suficiente para sobreviverem.</p>
             <p>Os orcs da aldeia eram acostumados a demonstrar sua força em disputas e lutas, com os vitoriosos acumulando prestígio. Alabaster, desde criança não muito forte, evitava esse tipo de interação, preferindo passar seu tempo em uma biblioteca abandonada que encontrara em uma de suas muitas andanças.</p>
             <p>Alabaster gostava de ler histórias épicas e romances. Sonhava acordado em montar um belo cavalo branco, empunhando uma espada longa que usava para cortar a cabeça de dragões e salvar princesas em perigo.</p>
             <p>Com a puberdade chegando, os corpos de seus colegas passaram a despertar sentimentos diferentes em Alabaster. As princesas de seus sonhos começaram a ser substituídas por outros orcs. Orcs de braços musculosos, abdomens definidos e costas que fariam qualquer curioso se questionar sobre a função de tantos músculos diferentes.</p>
             <p>Alabaster desejava se aproximar dos outros jovens que também estavam descobrindo seus novos desejos. No entanto, conhecia muito bem o olhar que recebia. Se seus pares não o consideravam digno nem de ser orc, quem diria algo mais.</p>
+
+            <h3>Descoberta</h3>
             <p>Em uma de suas muitas escapadas, Alabaster encontrou um livro empoeirado, com vários diagramas de acessórios, que aparentemente davam poderes a quem as utilizasse. Chamou-lhe a atenção um bracelete, ilustrado com uma menina franzina socando a terra e fazendo com que tremesse.</p>
             <p>Um universo de possibilidades se desdobrou em frente aos olhos de Alabaster. Uma chance de uam nova vido, de ser admirado por todos. Passou os meses seguintes dedicando-se à busca dos materiais necessários e à construção do bracelete.</p>
             <p>Na tarde em que finalmente terminou, vestiu o bracelete, sentindo-se eufórico. Socou o chão. Nada. Lágrimas brotaram de seus olhos, e saiu correndo da velha biblioteca, batendo a porta às suas costas. O impacto causou tremores na terra, aos quais a velha construção não resistiu, ruindo em uma nuvem de poeira. Alabaster se surpreendeu, mas não se importou. Aquela parte de sua vida estava finalmente para trás.</p>
