--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                     <div class="card-text">
                       <p>Exoesqueleto sísmico</p>
                       <p>Força +4</p>
+                      <p>Faz a terra tremer. Pode tremer lugares específicos através de toque.</p>
                     </div>
                   </div>
                   
@@ -190,6 +191,7 @@
                     <ul>
                       <li>Espada longa (1d10 + força/2)</li>
                       <li>Machado curto (1d10 + força/2)</li>
+                      <li>Manopla (2d10 + força/2) A cada 5 turnos pode deixar um inimigo sonolento (+15) ou adormecido (+18)</li>
                     </ul>
                   </div>
                 </div>
