--- a/index.html
+++ b/index.html
@@ -176,8 +176,12 @@
                   <div class="card-body">
                     <div class="card-text">
                       <p>Exoesqueleto sísmico</p>
-                      <p>Força +4</p>
-                      <p>Faz a terra tremer. Pode tremer lugares específicos através de toque.</p>
+                      <ul>
+                        <li>Força +4</li>
+                        <li>Faz a terra tremer. Pode tremer lugares específicos através de toque.</li>
+                        <li>Orcish Rage – Caso tenha tomado dano no turno anterior, pode atacar 3 vezes</li>
+                      </ul>
+
                     </div>
                   </div>
                   
