--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                   <div class="card-header">Itens</div>
                   <div class="card-body">
                     <ul>
+                      <li>5000 Soberanais</li>
                       <li>Espada longa (1d10 + força/2)</li>
                       <li>Machado curto (1d10 + força/2)</li>
                       <li>Manopla (2d10 + força/2) A cada 5 turnos pode deixar um inimigo sonolento (+15) ou adormecido (+18)</li>
